fixed padding and spacing of text heavy areas

--- a/style.css
+++ b/style.css
@@ -173,6 +173,8 @@ a:hover {
 	position: relative;
 }
 
+
+
 /*Work Pages Styling*/
 
 .column2 {
@@ -330,8 +332,15 @@ body {
 
 /*About Page*/
 
+#about_header {
+	font-family: 'Work Sans', sans-serif;
+	font-size: 32px;
+	line-height: 60px;
+	font-weight: 500;
+}
 #about_description {
 	font-weight: 400;
+	line-height: 40px;
 }
 
 #footer {
@@ -364,7 +373,6 @@ body {
 	font-family: 'Work Sans', sans-serif;
 	font-size: 32px;
 	line-height: 40px;
-	padding-top: 24px;
 	font-weight: 500;
 }
 
@@ -388,8 +396,8 @@ body {
 }
 
 #profile_pic {
-	width: 140px;
-	height: 140px;
+	width: 180px;
+	height: 180px;
 	border-radius: 50%;
 }
 
